# reddit-wsb-crawler

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CRAWL_INTERVAL.md  DISCORD_EMBEDS.md  DOCKER.md  DOCKER_ENV.md  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  setup.sh  start.sh  test_logging.py  update.sh  web-start.sh
.github/: PAT_SETUP.md  WORKFLOW_TROUBLESHOOTING.md  dependabot.yml
.github/workflows/: build-frontend.yml  ci.yml  docker-ghcr.yml  docker-test.yml  manual-docker.yml  release.yml
config/: .env  .env.example
data/input/: all_tickers.csv  symbols_list.pkl  ticker_name_map.pkl
data/output/: latest_resolved_names.csv  latest_ticker_hits.pkl
data/output/pickle/: 250704-021119_crawler-ergebnis.pkl  250704-021837_crawler-ergebnis.pkl  250704-021956_crawler-ergebnis.pkl  250704-022405_crawler-ergebnis.pkl  250704-022444_crawler-ergebnis.pkl  250704-023004_crawler-ergebnis.pkl  250704-023911_crawler-ergebnis.pkl  250704-030148_crawler-ergebnis.pkl
data/output/summaries/: 250704-023004_summary.md
docs/: DESIGN_REFERENCE.md
scripts/: check.sh
src/: __version__.py  build_ticker_name_cache.py  check_ticker_mentions.py  discord_utils.py  excel_merge.py  export_to_gsheet.py  health_check.py  log_utils.py  main_crawler.py  rate_limiter.py  reddit_crawler.py  requirements.txt  resolve_latest_hits.py  run_crawler_headless.py  run_crawler_headless.py   summarize_ticker.GPT5.py  summarize_ticker.py  summarizer.py  test_discord_embeds.py  ticker_data.py  ticker_resolver.py  ticker_utils.py  utils.py  web_app.py
src/UI-test/: excel_merge.py  log_utils.py  main_crawler.py  reddit_crawler.py  run_crawler_headless.py  summarize_ticker.py  summarizer.py  ticker_utils.py  visualize_sentiment.py  web_app.py
src/scripts/: test_discord_message.py
src/wsb_crawler/: config.py  cron.py  main.py  models.py
src/wsb_crawler/alerts/: bot.py  discord.py  dispatch.py  telegram.py
src/wsb_crawler/analysis/: detector.py  signals.py  trends.py
src/wsb_crawler/api/: auth.py  server.py
src/wsb_crawler/api/routers/: config.py  dashboard.py  status.py
src/wsb_crawler/api/static/: index.html
src/wsb_crawler/crawler/: reddit.py  runner.py  ticker.py
src/wsb_crawler/enrichment/: news.py  prices.py  resolver.py
src/wsb_crawler/runtime/: __init__.py  progress.py
src/wsb_crawler/storage/: cache.py  database.py
tests/: test_alert_persistence.py  test_api_server.py  test_auth.py  test_cache.py  test_config.py  test_config_api.py  test_cron.py  test_dashboard_api.py  test_dashboard_frontend.py  test_database.py  test_detector.py  test_discord.py  test_discord_webhook.py  test_models.py  test_news.py  test_prices.py  test_resolver.py  test_runner.py  test_scheduler.py  test_signals.py  test_telegram.py  test_ticker.py  test_trends.py
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx
web/src/pages/: Alerts.tsx  Config.tsx  Dashboard.tsx  Logs.tsx  Setup.tsx
