[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsb-crawler"
version = "2.0.0"
description = "Automatisches Frühwarnsystem für Reddit-Aktien-Hypes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Reddit
    "asyncpraw==7.7.1",

    # HTTP (async)
    "httpx==0.27.2",

    # Config & Validation
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",

    # Finance
    "yfinance==0.2.50",

    # Database (async SQLite)
    "aiosqlite==0.20.0",

    # Discord Bot (Slash-Commands)
    "discord.py==2.4.0",

    # Logging
    "loguru==0.7.2",

    # Web API + Dashboard
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",

    # Utilities
    "tenacity==9.0.0",   # Retry-Logik für API-Calls
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==7.1.0",
    "ruff==0.8.4",        # Linter + Formatter (ersetzt black + flake8)
    "mypy==1.13.0",
]

[project.scripts]
wsb-crawler = "wsb_crawler.main:main"
wsb-setup   = "wsb_crawler.setup_wizard:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wsb_crawler"]

# ── Ruff (Linter + Formatter) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length wird vom formatter gehandelt

# ── pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/wsb_crawler --cov-report=term-missing"

# ── mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
